feat: implement internationalization for various components and update translations

--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -7,5 +7,34 @@
     "Робототехника": "Робототехника",
     "Английский": "Английский",
     "Живопись для детей": "Живопись для детей",
-    "Живопись для взрослых": "Живопись для взрослых"
+    "Живопись для взрослых": "Живопись для взрослых",
+    "твой проводник в мир технологий и искусства": "твой проводник в мир технологий и искусства",
+    "получите бесплатное первое занятие": "получите бесплатное первое занятие",
+    "Перейти к курсам": "Перейти к курсам",
+    "Довольных студентов": "Довольных студентов",
+    "Преподавателей": "Преподавателей",
+    "групп": "групп",
+    "это современный учебный центр, специализирующийся на технологиях, искусстве и образовании. Мы предоставляем комфортную и поддерживающую среду для развития талантов и навыков наших учеников. Команда высококвалифицированных преподавателей использует передовые методики и технологии, делая занятия интерактивными и увлекательными. Мы уделяем большое внимание индивидуальному подходу, помогая каждому ученику раскрыть свои способности и достичь успеха.": "это современный учебный центр, специализирующийся на технологиях, искусстве и образовании. Мы предоставляем комфортную и поддерживающую среду для развития талантов и навыков наших учеников. Команда высококвалифицированных преподавателей использует передовые методики и технологии, делая занятия интерактивными и увлекательными. Мы уделяем большое внимание индивидуальному подходу, помогая каждому ученику раскрыть свои способности и достичь успеха.",
+    "это сообщество увлеченных и целеустремленных людей, предлагающее не только учебные курсы, но и мероприятия, мастер-классы и конкурсы. Удобное расположение учебного центра обеспечивает легкий доступ для всех желающих.": "это сообщество увлеченных и целеустремленных людей, предлагающее не только учебные курсы, но и мероприятия, мастер-классы и конкурсы. Удобное расположение учебного центра обеспечивает легкий доступ для всех желающих.",
+    "Авторские кусы от JustRobotics": "Авторские кусы от JustRobotics",
+    "Подробнее о кусе": "Подробнее о кусе",
+    "отзывы": "отзывы",
+    "Адрес Орьентир": "Адрес Орьентир",
+    "График работы": "График работы",
+    "Номера телефонов": "Номера телефонов",
+    "получите бесплатный первый урок": "получите бесплатный первый урок",
+    "Филиал Ц4": "Филиал Ц4",
+    "Филиал Беруни": "Филиал Беруни",
+    "получить": "получить",
+    "Ваше имя": "Ваше имя",
+    "Ваше фамиля": "Ваше фамиля",
+    "Номер телефона": "Номер телефона",
+    "Возраст": "Возраст",
+    "Телеграм": "Телеграм",
+    "Инстаграм": "Инстаграм",
+    "Ютюб": "Ютюб",
+    "Английский для взрослых": "Английский для взрослых",
+    "Английский для детей": "Английский для детей",
+    "Шахмат": "Шахмат",
+    "Живопись": "Живопись"
 }
