--- a/src/locales/uz/translation.json
+++ b/src/locales/uz/translation.json
@@ -7,5 +7,34 @@
     "Робототехника": "Robotexnika",
     "Английский": "Ingliz tili",
     "Живопись для детей": "Bolalar uchun rassomlik",
-    "Живопись для взрослых": "Kattalar uchun rassomlik"
+    "Живопись для взрослых": "Kattalar uchun rassomlik",
+    "твой проводник в мир технологий и искусства": "Texnologiya va san'at olamidagi yo'lboshchingiz",
+    "получите бесплатное первое занятие": "Birinchi darsni bepul oling",
+    "Перейти к курсам": "Kurslarga o'tish",
+    "Довольных студентов": "Qoniqarli talabalar",
+    "Преподавателей": "O'qituvchilar",
+    "групп": "Guruhlar",
+    "это современный учебный центр, специализирующийся на технологиях, искусстве и образовании. Мы предоставляем комфортную и поддерживающую среду для развития талантов и навыков наших учеников. Команда высококвалифицированных преподавателей использует передовые методики и технологии, делая занятия интерактивными и увлекательными. Мы уделяем большое внимание индивидуальному подходу, помогая каждому ученику раскрыть свои способности и достичь успеха.": "Bu zamonaviy ta'lim markazi texnologiyalar, san'at va ta'limga ixtisoslashgan. Biz o'quvchilarimizning talantlari va ko'nikmalarini rivojlantirish uchun qulay va qo'llab-quvvatlovchi muhitni taqdim etamiz. Yuqori malakali o'qituvchilar jamoasi darslarni interaktiv va qiziqarli qilish uchun zamonaviy metodlar va texnologiyalardan foydalanadi. Har bir o'quvchining qobiliyatlarini ochishiga va muvaffaqiyatga erishishiga yordam berish uchun individual yondashuvga katta e'tibor beramiz.",
+    "это сообщество увлеченных и целеустремленных людей, предлагающее не только учебные курсы, но и мероприятия, мастер-классы и конкурсы. Удобное расположение учебного центра обеспечивает легкий доступ для всех желающих.": "Bu qiziqish va maqsadga intiluvchi odamlar jamoasi, nafaqat o'quv kurslarini, balki tadbirlar, ustaxonalar va tanlovlarni taklif etadi. Ta'lim markazining qulay joylashuvi barcha xohlovchilar uchun oson kirishni ta'minlaydi.",
+    "Авторские кусы от JustRobotics": "JustRobotics tomonidan mualliflik kurslari",
+    "Подробнее о кусе": "Kurs haqida batafsil",
+    "отзывы": "Fikrlar",
+    "Адрес Орьентир": "Manzil: Ko'rsatma",
+    "График работы": "Ish vaqti",
+    "Номера телефонов": "Telefon raqamlari",
+    "получите бесплатный первый урок": "Birinchi darsni bepul oling",
+    "Филиал Ц4": "Filial C4",
+    "Филиал Беруни": "Filial Beruniy",
+    "получить": "Olish",
+    "Ваше имя": "Ismingiz",
+    "Ваше фамиля": "Familiyangiz",
+    "Номер телефона": "Telefon raqami",
+    "Возраст": "Yosh",
+    "Телеграм": "Telegram",
+    "Инстаграм": "Instagram",
+    "Ютюб": "YouTube",
+    "Английский для взрослых": "Kattalar uchun ingliz tili",
+    "Английский для детей": "Bolalar uchun ingliz tili",
+    "Шахмат": "Shaxmat",
+    "Живопись": "Rassomlik"
 }
